minor data changes

--- a/delivery.html
+++ b/delivery.html
@@ -763,6 +763,13 @@
                             </a>
                             </div>
                         </li>
+                        <li class="collection-item">
+                            <div>1 Seafood Cantonn | P 325.00                 
+                              <a href="#!" class="secondary-content delete">
+                                <i class="material-icons">close</i>
+                            </a>
+                            </div>
+                        </li>
                         </ul>
                       <button id="order" class="btn red red darken-4"  style = "position:relative; left:70px; top:2px">Submit Orders</button>
                     </div>
