--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard-0d6rb3</title>
+  <title>Red_Panda-Dashboard</title>
 
 </head>
 
