final commit for redpanda project

--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
                     </h7>
                     <p class="grey-text">30 Visayas Ave<br>(02) 376 6491<br>Open . Closes 10PM<br>Cosy Casual - Good for kids
                     </p>
-                    <a href="https://www.facebook.com/RedPandaEventsCateringServices/"><img src="../img/restau3.jpg" alt="" class="square" width="150px;" style="margin-top: -250px; margin-left: 190px;"></a>             
+                    <a href="https://www.facebook.com/RedPandaEventsCateringServices/"><img src="https://i.imgur.com/9YmZXBV.jpg" alt="" class="square" width="150px;" style="margin-top: -250px; margin-left: 190px;"></a>             
                   </li>
                 <li class="collection-item avatar">
                   <h7>
@@ -246,7 +246,7 @@
                   </h7>
                   <p class="grey-text">227 Salcedo<br>(02)844 9539<br>Open . Close 10pm
                   </p>
-                  <a href="stocktonplace.html"><img src="../img/restau1.jpg" alt="" class="square" width="150px;" style="margin-top: -200px; margin-left: 190px;"></a>            
+                  <a href="stocktonplace.html"><img src="https://i.imgur.com/FmF5LBH.jpg" alt="" class="square" width="150px;" style="margin-top: -200px; margin-left: 190px;"></a>            
                 </li>
                 <li class="collection-item avatar">
                   <h7>
@@ -254,7 +254,7 @@
                   </h7>
                   <p class="grey-text">1st Floor Bigbang Building<br>0995 843 8208<br>Open . Closes 6AM Thu
                   </p>
-                  <a href="https://www.facebook.com/fantasticchefmalate/?gclid=CjwKCAjw0N3nBRBvEiwAHMwvNo4-Ktexr_ghhWDZvfoF14mn8hmJULOPpPPAsMMVzktTzGHr1DnnHRoCkiMQAvD_BwE"><img src="../img/restau2.jpg" alt="" class="square" width="150px;" style="margin-top: -250px; margin-left: 190px;"></a>           
+                  <a href="https://www.facebook.com/fantasticchefmalate/?gclid=CjwKCAjw0N3nBRBvEiwAHMwvNo4-Ktexr_ghhWDZvfoF14mn8hmJULOPpPPAsMMVzktTzGHr1DnnHRoCkiMQAvD_BwE"><img src="https://i.imgur.com/IBv3PXP.jpg" alt="" class="square" width="150px;" style="margin-top: -250px; margin-left: 190px;"></a>           
                 </li>
                 
                 </ul>
